@@ -3,6 +3,8 @@ HTMLSTYLE overlib
 
 FONTDEFINE 10 GillSans.ttf 8
 
+SET rrd_use_poller_output 1
+
 KEYPOS DEFAULT -1 -1 Traffic Load
 KEYTEXTCOLOR 0 0 0
 KEYBGCOLOR 255 255 255
@@ -80,16 +82,18 @@ LINK node00352-node00342
 	VIA 533 170
 
 LINK normal
-	NODES node00342 node80111
+	NODES node00342 node80111:N
 	VIA 719 167
 	BWLABEL unformatted
+	LINKSTYLE oneway
 
 LINK test1
-	NODES node20108 node00342
+	NODES node20108 node00342:S
 	# INBWFORMAT {link:this:inpercent}% {link:this:bandwidth_in:%k}b
 	OUTBWFORMAT {link:this:outpercent}% {link:this:bandwidth_out:%k}b
 	# OUTBWFORMAT {link:this:outpercent:%.2f}%
 	INBWFORMAT {link:this:inpercent:%.2f}%
+	LINKSTYLE oneway
 	BWSTYLE angled
 
 LINK test2
